# Agent2Chat

./: .gitignore  LICENSE  README.md  SECURITY.md  config.example.json  pyproject.toml
agent2chat/: __init__.py  __main__.py  bridge.py  config.py  formatting.py  http_util.py  service.py  slack_setup.py  wizard.py
agent2chat/adapters/: __init__.py  base.py  claude_code.py  codex.py  generic.py
agent2chat/connectors/: __init__.py  base.py  slack.py  teams.py  telegram.py  ws.py
tests/: test_adapters.py  test_bridge.py  test_config.py  test_connectors.py  test_formatting.py  test_service.py  test_slack_setup.py  test_ws.py
